--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Just-programmer1216/For_tea.git"
+    "url": "https://github.com/Just-programmer1216/For_tea.git"
   },
   "dependencies": {
     "photooftea": "1.0.0"
